
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#5293] Prevent drag/drop from Resource Group tree to Resource tree in Resource Group page
- [#4433] Validate paths in setup for trailing slash
- [#564], [#4506] Make Workspace path portable by allowing path setting replacements
- [#5086] Fix issues with Package Management when open_basedir is in effect
- [#4947] Adjust ensuring of admin access to context to only needed policies
- [#5078] Have default resource field context settings, such as default_template, respected in Quick create
- [#5909] Allow blank extensions in Add Content Type window
- [#5931] Fix code that prevents easy renaming of assets directory with package management
- [#5841] Properly color active state for tabs in mgr ui
- [#3287] Fix issue with dob User field in editing panel in mgr
- [#5060], [#5043] Fix issue with openTo and TVs for MODx.Browser
- [#3396] Allow MODX_API_MODE in mgr context
- [#4230] Add ODF and OOXML to default uploadable file types setting
- [#5315] Use automatic_alias behavior when updating site_start regardless of setting
- [#3535] Fix issue with tree_default_sort not being respected on the resource tree
- [#5892] Add for default_media_source setting for specifying the default media source for a site
- [#5896] Make console window always closable
- [#5757] Allow text in grids to be selectable
- [#5471] Add publishing options to Duplicate Resource window
- [#5879] Ensure html tags are stripped on titles in the Resource edit view
- [#5855] Ensure if no parents are specified, resourcelist input option works as expected
- [#5852] Fix issue where input options are wiped on quick update TV
- Add showNone option to source/getlist processor
- [#5619] Enable modElements to store content in external files
- [#5856] Implement ability for derivative Resource types to have their own translatable name