@@ -15,6 +15,7 @@ $_lang['content_type_err_nfs'] = 'Content type with ID [[+id]] not found.';
 $_lang['content_type_err_ns'] = 'Content Type not specified.';
 $_lang['content_type_err_ns_name'] = 'Please specify a valid name for the Content Type.';
 $_lang['content_type_err_create'] = 'An error occurred while trying to create the Content Type.';
+$_lang['content_type_err_in_use'] = 'You cannot remove this Content Type, as it is currently in use by Resources in MODX. Please re-assign the Content Types of those Resources before proceeding.';
 $_lang['content_type_err_remove'] = 'An error occurred while trying to remove the Content Type.';
 $_lang['content_type_err_save'] = 'An error occurred while trying to save the Content Type.';
 $_lang['content_type_new'] = 'New Content Type';
